--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "magic-sdk": "^4.1.1",
     "next": "10.0.7",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "strapi-plugin-magic": "^0.9.0"
   }
 }
